fixed login page alignment

--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,6 +1,6 @@
 .cont{
     width: 530px;
-    margin-top: 60%;
+    margin-top: 6%;
   }
 
 .btn1{
